<resources>
    <string name="app_name">QR code Scanner</string>
    <string name="scan_the_qr_code_press_the_button_below">Scan the QR code press the button below</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="open_url">Open URL</string>
    <string name="send_email">Send Email</string>
    <string name="share_app_with_friends">Share app with friends</string>
    <string name="share_content">share content</string>
</resources>